--- a/public/index.html
+++ b/public/index.html
@@ -1,23 +1,25 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Socket.IO whiteboard</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body style="overflow: hidden">
+  <head>
+    <meta charset="UTF-8" />
+    <title>mycohackers whiteboard</title>
+    <link rel="stylesheet" href="dependencies/colorpicker.min.css" />
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body style="overflow: hidden">
+    <svg></svg>
+    <canvas class="whiteboard client"></canvas>
 
-  <canvas class="whiteboard" ></canvas>
+    <div class="colors">
+      <form method="get" target="_blank">
+        <input type="text" id="colorpicker" />
+      </form>
+      <input class="slider" type="range" min="2" max="20" id="stroke-width" />
+      <script src="dependencies/colorpicker.js"></script>
+    </div>
 
-  <div class="colors">
-    <div class="color black"></div>
-    <div class="color red"></div>
-    <div class="color green"></div>
-    <div class="color blue"></div>
-    <div class="color yellow"></div>
-  </div>
-
-  <script src="/socket.io/socket.io.js"></script>
-  <script src="/main.js"></script>
-</body>
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="/main.js"></script>
+    <script src="/main_trails.js"></script>
+  </body>
 </html>
