--- a/public/server.html
+++ b/public/server.html
@@ -1,45 +1,56 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Socket.IO whiteboard</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Socket.IO whiteboard</title>
+    <link rel="stylesheet" href="dependencies/colorpicker.min.css" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="server.css" />
+  </head>
+  <body>
+    <div id="main"></div>
 
-    <div id="main">
-
+    <div class="server-controls">
+      <!-- <div class="colors">
+        <form method="get" target="_blank">
+          <input type="text" id="colorpicker" />
+        </form>
+      </div> -->
+      <button id="toggle-colors">disable user colors</button>
+      <label for="stroke-server">Stroke width</label>
+      <input type="number" id="stroke-server" />
+      <button id="stroke-server-button">Enter</button>
+      <!-- <label for="record"></label>
+      <input type="number" id="record-time" />
+      <button id="record">Record</button>
+      <button id="play">Play Recording</button> -->
+      <button id="toggle-trails">toggle trails</button>
+      <button id="toggle-drawing">toggle drawing</button>
+      <button id="toggle-animation">toggle animation</button>
     </div>
+    <canvas class="whiteboard client"></canvas>
 
-  <div class="colors">
-    <div class="color black"></div>
-    <div class="color red"></div>
-    <div class="color green"></div>
-    <div class="color blue"></div>
-    <div class="color yellow"></div>
-  </div>
-
-  <div class="user-controls">
-    <div class="canvases">
-    </div>
-    <div class="user-colors">
+    <div class="user-controls">
+      <div class="user-colors">
         <div class="user-color black"></div>
         <div class="user-color red"></div>
         <div class="user-color green"></div>
         <div class="user-color blue"></div>
         <div class="user-color yellow"></div>
-    </div>
-    
-    <div class="controls">
-        <label for="stroke">Stroke width</label>
-        <input type="number">
-        <button>Enter</button>
-    </div>
-    
-        <button id="new-frame">New frame</button>
-  </div>
+      </div>
 
-  <script src="/socket.io/socket.io.js"></script>
-  <script src="/server.js"></script>
-</body>
+      <div class="controls">
+        <label for="stroke-user">Stroke width</label>
+        <input type="number" id="stroke-user" />
+        <button id="stroke-user-button">Enter</button>
+      </div>
+
+      <button id="new-frame">Save</button>
+      <button id="clear">Clear</button>
+    </div>
+    <script src="dependencies/colorpicker.js"></script>
+
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="/server.js"></script>
+  </body>
 </html>
