--- a/public/server.html
+++ b/public/server.html
@@ -27,6 +27,7 @@
       <button id="toggle-trails">toggle trails</button>
       <button id="toggle-drawing">toggle drawing</button>
       <button id="toggle-animation">toggle animation</button>
+      <button id="toggle-zoom">toggle zoom</button>
     </div>
     <canvas class="whiteboard client"></canvas>
 
