Add more effects

--- a/public/server.html
+++ b/public/server.html
@@ -20,15 +20,18 @@
       <label for="stroke-server">Stroke width</label>
       <input type="number" id="stroke-server" />
       <button id="stroke-server-button">Enter</button>
-      <!-- <label for="record"></label>
-      <input type="number" id="record-time" />
-      <button id="record">Record</button>
-      <button id="play">Play Recording</button> -->
       <button id="toggle-trails">toggle trails</button>
       <button id="toggle-drawing">toggle drawing</button>
-      <button id="toggle-animation">toggle animation</button>
+      <button id="toggle-rotate">toggle rotate</button>
       <button id="toggle-zoom">toggle zoom</button>
+      <label for="animation-speed">Animation duration</label>
+      <input type="number" id="animation-speed" />
+
+      <label for="eraser-speed">Eraser speed</label>
+      <input type="number" id="eraser-speed" />
+      <button id="eraser">toggle eraser</button>
     </div>
+    <div></div>
     <canvas class="whiteboard client"></canvas>
 
     <div class="user-controls">
