--- a/public/visualiser.html
+++ b/public/visualiser.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="visualiser.css" />
   </head>
   <body>
-    <canvas class="whiteboard client"></canvas>
+    <canvas class="whiteboard client default-animation"></canvas>
     <svg></svg>
 
     <script src="/socket.io/socket.io.js"></script>
