--- a/public/server.html
+++ b/public/server.html
@@ -24,6 +24,9 @@
       <button id="toggle-drawing">toggle drawing</button>
       <button id="toggle-rotate">toggle rotate</button>
       <button id="toggle-zoom">toggle zoom</button>
+      <button id="toggle-skew">toggle skew</button>
+      <button id="toggle-matrix">toggle matrix</button>
+      <button id="toggle-blur">toggle blur</button>
       <label for="animation-speed">Animation duration</label>
       <input type="number" id="animation-speed" />
 
